Load and display all lessons with API

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
 
      </section>
 
+     <section>
+        <h2 class="text-4xl font-bold mb-8 text-center"><span class="text-sky-400">Lets</span> Learn Vocabylaries</h2>
+
+        <div id="level-container" class="flex gap-5 flex-wrap justify-center">
+
+        </div>
+     </section>
+
+     <script src="./script/script.js"></script>
+
 
   </body>
 </html>
